--- a/templates/championStatistics.html
+++ b/templates/championStatistics.html
@@ -135,19 +135,43 @@
             <div class="lane">
                 <div>Top</div>
                 {% for champ in alsoPlayedWith[0] %}
-                    <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp"><br>{{alsoPlayedWith[0][champ]}}%<br><br>
+                    <a href="championStatistics?champion={{champ}}">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp">
+                    </a>
+                    <br>
+                    {{champ}}
+                    <br>
+                    {{alsoPlayedWith[0][champ]}}%
+                    <br>
+                    <br>
                 {% endfor %}
             </div>
             <div class="lane">
                 <div>Jungle</div>
                 {% for champ in alsoPlayedWith[1] %}
-                    <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp"><br>{{alsoPlayedWith[1][champ]}}%<br><br>
+                    <a href="championStatistics?champion={{champ}}">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp">
+                    </a>
+                    <br>
+                    {{champ}}
+                    <br>
+                    {{alsoPlayedWith[1][champ]}}%
+                    <br>
+                    <br>
                 {% endfor %}
             </div>
             <div class="lane">
                 <div>Mid</div>
                 {% for champ in alsoPlayedWith[2] %}
-                    <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp"><br>{{alsoPlayedWith[2][champ]}}%<br><br>
+                    <a href="championStatistics?champion={{champ}}">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp">
+                    </a>
+                    <br>
+                    {{champ}}
+                    <br>
+                    {{alsoPlayedWith[2][champ]}}%
+                    <br>
+                    <br>
                 {% endfor %}
             </div>
         </div>
@@ -158,13 +182,29 @@
             <div class="lane">
                 <div>Bottom</div>
                 {% for champ in alsoPlayedWith[3] %}
-                    <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp"><br>{{alsoPlayedWith[3][champ]}}%<br><br>
+                    <a href="championStatistics?champion={{champ}}">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp">
+                    </a>
+                    <br>
+                    {{champ}}
+                    <br>
+                    {{alsoPlayedWith[3][champ]}}%
+                    <br>
+                    <br>
                 {% endfor %}
             </div>
             <div class="lane">
                 <div>Support</div>
                 {% for champ in alsoPlayedWith[4] %}
-                    <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp"><br>{{alsoPlayedWith[4][champ]}}%<br><br>
+                    <a href="championStatistics?champion={{champ}}">
+                        <img src="https://wiki.leagueoflegends.com/en-us/images/thumb/{{champ}}_OriginalSquare.png/50px-{{champ}}_OriginalSquare.png?54659.png.webp">
+                    </a>
+                    <br>
+                    {{champ}}
+                    <br>
+                    {{alsoPlayedWith[4][champ]}}%
+                    <br>
+                    <br>
                 {% endfor %}
             </div>
         </div>
