--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,10 @@
             border-radius: 25px;
             border: rgba(255, 255, 255, 0.6) solid 5px;
             font-size: 20px;
-            background-color: #008080;
+            background-color: #343f87;
             width: max-content;
             color: white;
-            box-shadow: 0 0 20px white, inset 0 0 20px white;
+            box-shadow: 0 0 10px white, inset 0 0 10px white;
         }
         a {
             text-decoration: none;
